--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: R wrapper functions written around the LINE graph-embedding algorit
 Depends: R (>= 3.4.0) 
 License: MIT + file LICENSE
 Encoding: UTF-8
-Imports: Rcpp (>= 0.12.0)
+Imports: Rcpp
 LinkingTo: Rcpp
 LazyData: true
 RoxygenNote: 6.0.1
